--- a/pmp/src/main/resources/application.yml
+++ b/pmp/src/main/resources/application.yml
@@ -4,3 +4,4 @@ spring:
     username: gaussdb
     password: MyPassword@123
     driver-class-name: org.opengauss.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
