feat: 登录注册功能完成

--- a/pmp/pom.xml
+++ b/pmp/pom.xml
@@ -77,6 +77,12 @@
             <version>1.2.23</version>
         </dependency>
 
+        <!-- 邮件发送 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!--hutool-->
         <dependency>
             <groupId>cn.hutool</groupId>
