feat: alert_rule表查询与修改阈值功能、error表添加功能.ok

--- a/pmp/src/main/resources/application.yml
+++ b/pmp/src/main/resources/application.yml
@@ -5,3 +5,10 @@ spring:
     password: MyPassword@123
     driver-class-name: org.opengauss.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      validation-query: select 1
+      test-while-idle: true
+
+
+server:
+  port: 8080
