--- a/pmp/pom.xml
+++ b/pmp/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>opengauss-jdbc</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
