--- a/pmp/src/main/resources/application.yml
+++ b/pmp/src/main/resources/application.yml
@@ -41,3 +41,6 @@ spring:
 server:
   port: 8080
 
+mybatis-plus:
+  configuration:
+    default-enum-type-handler: com.baomidou.mybatisplus.core.handlers.MybatisEnumTypeHandler
