--- a/pmp/src/main/resources/application.yml
+++ b/pmp/src/main/resources/application.yml
@@ -5,6 +5,27 @@ spring:
     password: MyPassword@123
     driver-class-name: org.opengauss.Driver
     type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      # 连接池配置
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      # 连接等待超时时间
+      max-wait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      time-between-eviction-runs-millis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      min-evictable-idle-time-millis: 300000
+      # 验证连接有效性
+      validation-query: SELECT 1
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      # 配置连接失败重试次数
+      connection-error-retry-attempts: 3
+      break-after-acquire-failure: false
+      # 配置获取连接等待超时后的重试间隔
+      time-between-connect-error-millis: 5000
 
 
   data:
