--- a/pmp/pom.xml
+++ b/pmp/pom.xml
@@ -31,6 +31,20 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.javascript</groupId>
+            <artifactId>closure-compiler</artifactId>
+            <version>v20230802</version>
+        </dependency>
+
+        <!-- Jackson (Spring Boot 默认) -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
+
         <!--apifox使用的依赖-->
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -104,7 +118,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-
 
 
         <!--hutool-->
