--- a/pmp/pom.xml
+++ b/pmp/pom.xml
@@ -38,6 +38,18 @@
             <version>2.5.0</version> <!-- 使用最新版本 -->
         </dependency>
 
+        <dependency>
+            <groupId>io.milvus</groupId>
+            <artifactId>milvus-sdk-java</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.google.javascript</groupId>
+            <artifactId>closure-compiler</artifactId>
+            <version>v20230802</version>
+        </dependency>
 
 
         <dependency>
