--- a/pmp/pom.xml
+++ b/pmp/pom.xml
@@ -31,18 +31,18 @@
     </properties>
     <dependencies>
 
-        <dependency>
-            <groupId>com.google.javascript</groupId>
-            <artifactId>closure-compiler</artifactId>
-            <version>v20230802</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.javascript</groupId>-->
+<!--            <artifactId>closure-compiler</artifactId>-->
+<!--            <version>v20230802</version>-->
+<!--        </dependency>-->
 
-        <!-- Jackson (Spring Boot 默认) -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.2</version>
-        </dependency>
+<!--        &lt;!&ndash; Jackson (Spring Boot 默认) &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--            <artifactId>jackson-databind</artifactId>-->
+<!--            <version>2.15.2</version>-->
+<!--        </dependency>-->
 
 
         <!--apifox使用的依赖-->
@@ -57,14 +57,6 @@
             <artifactId>milvus-sdk-java</artifactId>
             <version>2.6.0</version>
         </dependency>
-
-
-        <dependency>
-            <groupId>com.google.javascript</groupId>
-            <artifactId>closure-compiler</artifactId>
-            <version>v20230802</version>
-        </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
